[package]
name = "lib-q-kem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Post-quantum Key Encapsulation Mechanisms for lib-Q"
keywords = ["cryptography", "post-quantum", "kem", "ml-kem", "nist"]
categories = ["cryptography", "wasm"]

[dependencies]
lib-q-core = { path = "../lib-q-core" }

# RustCrypto ML-KEM implementation (FIPS 203 standard)
lib-q-ml-kem = { path = "../lib-q-ml-kem", optional = true, default-features = false }

# DAWN KEM implementation
lib-q-dawn = { path = "../lib-q-dawn", optional = true, default-features = false }

# Classical McEliece KEM implementation
lib-q-cb-kem = { path = "../lib-q-cb-kem", optional = true, default-features = false }

# SHA3 for authentication proofs
lib-q-sha3 = { path = "../lib-q-sha3", optional = true, default-features = false }

# Rand dependencies for the ml-kem feature
rand = { version = "0.9.2", optional = true }
rand_core = { version = "0.9.3", optional = true }

# WASM bindings
wasm-bindgen = { version = "0.2.101", optional = true }

[dev-dependencies]
rand = "0.9.2"

[features]
default = []
std = [] # Compatibility feature for CI/testing
alloc = [] # Enable alloc support for Vec and other collections
# Enable ml-kem (FIPS 203 standard) with modern dependencies
ml-kem = [
    "dep:lib-q-ml-kem",
    "dep:lib-q-sha3",
    "rand",
    "rand_core",
    "lib-q-core/std",
    "alloc",
]

# Enable WASM support
wasm = [
    "wasm-bindgen",
    "ml-kem",
    "lib-q-core/wasm",
]

cb-kem = ["dep:lib-q-cb-kem", "lib-q-cb-kem/alloc", "lib-q-cb-kem/sha3-hash"]
hqc = []
dawn = ["dep:lib-q-dawn", "lib-q-dawn/std"]

[lib]
name = "lib_q_kem"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
