[package]
name = "lib-q-kem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Post-quantum Key Encapsulation Mechanisms for lib-Q"
keywords = ["cryptography", "post-quantum", "kem", "ml-kem", "nist"]
categories = ["cryptography", "wasm"]

[dependencies]
lib-q-core = { path = "../lib-q-core" }

# RustCrypto ML-KEM implementation (FIPS 203 standard)
lib-q-ml-kem = { path = "../lib-q-ml-kem", optional = true, default-features = false }

# DAWN KEM implementation
lib-q-dawn = { path = "../lib-q-dawn", optional = true, default-features = false }

# Classical McEliece KEM implementation
lib-q-cb-kem = { path = "../lib-q-cb-kem", optional = true, default-features = false }

# HQC KEM implementation
lib-q-hqc = { path = "../lib-q-hqc", optional = true, default-features = false }

# SHA3 for authentication proofs
lib-q-sha3 = { path = "../lib-q-sha3", optional = true, default-features = false }

# Random dependencies for the ml-kem feature
lib-q-random = { path = "../lib-q-random", optional = true }

# WASM bindings
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
lib-q-random = { path = "../lib-q-random", features = ["std"] }

[features]
default = []
std = [] # Compatibility feature for CI/testing
alloc = [] # Enable alloc support for Vec and other collections
# Enable ml-kem (FIPS 203 standard) with modern dependencies
ml-kem = [
    "dep:lib-q-ml-kem",
    "dep:lib-q-sha3",
    "dep:lib-q-random",
    "lib-q-random/std",
    "lib-q-core/std",
    "alloc",
]

# Enable WASM support
wasm = [
    "wasm-bindgen",
    "ml-kem",
    "lib-q-core/wasm",
]

cb-kem = ["dep:lib-q-cb-kem", "lib-q-cb-kem/alloc", "lib-q-cb-kem/sha3-hash"]
hqc = ["dep:lib-q-hqc", "lib-q-hqc/hqc", "lib-q-hqc/alloc"]
dawn = ["dep:lib-q-dawn", "lib-q-dawn/std"]

[lib]
name = "lib_q_kem"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
