[package]
name = "lib-q-ml-dsa"
version.workspace = true
description = "LibQ ML-DSA implementation"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
publish = false

[lib]
bench = false

[dependencies]
lib-q-sha3 = { path = "../lib-q-sha3" }
lib-q-intrinsics = { path = "../lib-q-intrinsics" }
lib-q-platform = { path = "../lib-q-platform" }
lib-q-keccak = { path = "../lib-q-keccak", features = ["simd"] }
lib-q-random = { path = "../lib-q-random", optional = true }
hax-lib.workspace = true
hex = { workspace = true }
zeroize = { workspace = true, optional = true }
subtle = { version = "2.6.1", optional = true }

[dev-dependencies]
lib-q-random = { path = "../lib-q-random", features = ["std"] }
rand_core = { workspace = true }
    hex = { workspace = true, features = ["serde"] }
    serde_json = { workspace = true }
    serde = { workspace = true, features = ["derive"] }
    criterion = { workspace = true }
    glob = "0.3.3"

# This doesn't build on intel macos.
[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dev-dependencies]
pqcrypto-mldsa = { version = "0.1.2" } #, default-features = false

# Optional: Uncomment if you need hax formal verification with core-models
# Note: This requires the reference directory to not be excluded in the main Cargo.toml
# [target.'cfg(hax)'.dependencies]
# core-models = { path = "../reference/libcrux-main/fstar-helpers/core-models" }

[features]
default = ["std", "mldsa44", "mldsa65", "mldsa87", "random"]
simd128 = ["lib-q-sha3/asm", "lib-q-intrinsics/simd128"]
simd256 = ["lib-q-sha3/asm", "lib-q-intrinsics/simd256"]
random = ["dep:lib-q-random", "lib-q-random/std"]
nist-drbg = ["lib-q-random/nist-drbg"]                           # NIST DRBG for KAT compatibility
acvp = []                                                        # expose internal API for ACVP testing
test-utils = []                                                  # exposing internal functions for testing
debug-trace = []                                                 # enable debug tracing for SIGGEN debugging

# Compliance vs Security modes
fips-mode = []                                                   # Strict FIPS 204 compliance, minimal overhead
hardened-mode = ["random", "zeroize", "constant-time"]          # Enhanced security with RNG abstraction
zeroize = ["dep:zeroize"]                                        # Automatic zeroization of sensitive material
constant-time = ["dep:subtle"]                                   # Constant-time operations where possible

# Features for the different key sizes of ML-DSA
mldsa44 = []
mldsa65 = []
mldsa87 = []

# std support
std = []

[[bench]]
name = "manual44"
harness = false

[[bench]]
name = "manual65"
harness = false

[[bench]]
name = "manual87"
harness = false

[[bench]]
name = "ml-dsa"
harness = false



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)'] }
