[package]
name = "lib-q-ml-dsa"
version.workspace = true
description = "NIST FIPS 204 Module-Lattice Digital Signature Algorithm (ML-DSA) implementation"
keywords = ["cryptography", "post-quantum", "ml-dsa", "dilithium", "signatures"]
categories = ["cryptography", "no-std"]

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[lib]
bench = false

[dependencies]
lib-q-sha3 = { path = "../lib-q-sha3" }
lib-q-intrinsics = { path = "../lib-q-intrinsics" }
lib-q-platform = { path = "../lib-q-platform" }
lib-q-keccak = { path = "../lib-q-keccak", features = ["simd"] }
lib-q-random = { path = "../lib-q-random", optional = true }
hax-lib.workspace = true
hex = { workspace = true }
zeroize = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }

[dev-dependencies]
lib-q-random = { path = "../lib-q-random", features = ["std"] }
rand_core = { workspace = true }
hex = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
criterion = { workspace = true }
glob = "0.3.3"

# Reference implementation for comparison tests (doesn't build on Intel macOS)
[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dev-dependencies]
pqcrypto-mldsa = { version = "0.1.2" }

# Optional: Uncomment if you need hax formal verification with core-models
# Note: This requires the reference directory to not be excluded in the main Cargo.toml
# [target.'cfg(hax)'.dependencies]
# core-models = { path = "../reference/libcrux-main/fstar-helpers/core-models" }

[features]
default = ["std", "mldsa44", "mldsa65", "mldsa87", "random"]

# Parameter sets (FIPS 204)
mldsa44 = []  # ML-DSA-44: Security Category 2
mldsa65 = []  # ML-DSA-65: Security Category 3
mldsa87 = []  # ML-DSA-87: Security Category 5

# Platform optimizations
simd128 = ["lib-q-sha3/asm", "lib-q-intrinsics/simd128"]  # ARM NEON optimizations
simd256 = ["lib-q-sha3/asm", "lib-q-intrinsics/simd256"]  # x86_64 AVX2 optimizations

# Standard library support
std = []

# Random number generation
random = ["dep:lib-q-random", "lib-q-random/std"]
nist-drbg = ["random", "lib-q-random/nist-drbg"]  # NIST SP 800-90A DRBG for KAT compatibility

# Security hardening
fips-mode = []                                      # Strict FIPS 204 compliance, minimal overhead
hardened-mode = ["random", "zeroize", "constant-time"]  # Enhanced security features
zeroize = ["dep:zeroize"]                           # Automatic zeroization of sensitive material
constant-time = ["dep:subtle"]                      # Constant-time operations where possible

# Testing and validation
acvp = []         # Expose internal API for ACVP (Automated Cryptographic Validation Protocol) testing
test-utils = []   # Expose internal functions for advanced testing
debug-trace = []  # Enable debug tracing for signature generation debugging

[[bench]]
name = "manual44"
harness = false
required-features = ["mldsa44"]

[[bench]]
name = "manual65"
harness = false
required-features = ["mldsa65"]

[[bench]]
name = "manual87"
harness = false
required-features = ["mldsa87"]

[[bench]]
name = "ml-dsa"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)'] }
