[package]
name = "lib-q-ml-kem"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Pure Rust implementation of the Module-Lattice-Based Key-Encapsulation Mechanism Standard
(formerly known as Kyber) as described in FIPS 203
"""
rust-version = "1.92.0"
categories = ["cryptography", "no-std", "wasm"]
keywords = ["crypto", "ml-kem", "lattice", "post-quantum", "nist"]
exclude = ["tests/key-gen.rs", "tests/key-gen.json", "tests/encap-decap.rs", "tests/encap-decap.json"]

[features]
default = []
std = [] # Compatibility feature for CI/testing (no-op since package is already std-compatible)
deterministic = [] # Expose deterministic generation and encapsulation functions
zeroize = ["dep:zeroize"]
random = ["dep:lib-q-random", "lib-q-random/std"]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
hybrid-array = { version = "0.4.5", features = ["extra-sizes"] }
rand_core = { workspace = true }
lib-q-sha3 = { path = "../lib-q-sha3", version = "0.0.2" }
lib-q-random = { path = "../lib-q-random", version = "0.0.2", optional = true }
zeroize = { workspace = true, optional = true, default-features = false }

# WASM bindings
wasm-bindgen = { workspace = true, optional = true, features = ["serde-serialize"] }
js-sys = { workspace = true, optional = true }

[lib]
name = "lib_q_ml_kem"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true, features = ["serde"] }
hex-literal = "1.0.0"
num-rational = { version = "0.4.2", default-features = false, features = ["num-bigint"] }
lib-q-random = { path = "../lib-q-random", version = "0.0.2", features = ["std"] }
crypto-common = { version = "0.2.1", features = ["rand_core"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[[bench]]
name = "mlkem"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
