[package]
name = "lib-q-ml-kem"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Pure Rust implementation of the Module-Lattice-Based Key-Encapsulation Mechanism Standard
(formerly known as Kyber) as described in FIPS 203
"""
rust-version = "1.92.0"
categories = ["cryptography", "no-std", "wasm"]
keywords = ["crypto", "ml-kem", "lattice", "post-quantum", "nist"]
exclude = ["tests/key-gen.rs", "tests/key-gen.json", "tests/encap-decap.rs", "tests/encap-decap.json"]

[features]
default = []
std = [] # When enabled, the crate is not `#![no_std]` (optional). For a host `cdylib` link of this crate alone, pass `--features std` (see `.github/actions/rust-build`).
deterministic = [] # Expose deterministic generation and encapsulation functions
zeroize = ["dep:zeroize"]
random = ["dep:lib-q-random", "lib-q-random/std"]
wasm = [
    "wasm-bindgen",
    "js-sys",
    "random",
    "getrandom",
    "lib-q-random/wasm",
]
# Explicit gate for the optional `getrandom` dependency (workspace `--features getrandom`, CI, etc.).
# Optional deps referenced only as `dep:getrandom` do not get an implicit feature name.
getrandom = ["dep:getrandom"]
# Atomic side-channel hardening gate: masks decapsulation path, NTT randomisation, subtle comparisons.
# Partial enabling is unsafe; do not split into separate CT/masking features.
hardened = ["random", "zeroize", "dep:subtle", "getrandom"]

[dependencies]
hybrid-array = { version = "0.4.5", features = ["extra-sizes"] }
rand_core = { workspace = true }
lib-q-sha3 = { path = "../lib-q-sha3", version = "0.0.2" }
lib-q-random = { path = "../lib-q-random", version = "0.0.2", optional = true }
zeroize = { workspace = true, optional = true, default-features = false }
subtle = { workspace = true, optional = true, default-features = false }
getrandom = { workspace = true, optional = true, default-features = false }
wasm-bindgen = { workspace = true, optional = true, features = ["serde-serialize"] }
js-sys = { workspace = true, optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, default-features = false, features = ["wasm_js"] }

[lib]
name = "lib_q_ml_kem"
path = "src/lib.rs"
# wasm-pack requires `cdylib` in this manifest; `rlib` remains for Rust consumers. The workspace no-default-features build enables `std` for this crate so the host `cdylib` link succeeds (see `.github/actions/rust-build`).
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[dev-dependencies]
hex = { workspace = true, features = ["serde"] }
hex-literal = "1.0.0"
num-rational = { version = "0.4.2", default-features = false, features = ["num-bigint"] }
lib-q-random = { path = "../lib-q-random", version = "0.0.2", features = ["std"] }
crypto-common = { version = "0.2.1", features = ["rand_core"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen-test = { workspace = true }

[[test]]
name = "wasm_smoke"
path = "tests/wasm_smoke.rs"
required-features = ["wasm"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "mlkem"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(docsrs)',
    'cfg(feature, values("default", "std", "deterministic", "zeroize", "random", "wasm", "getrandom", "hardened"))',
] }
