[package]
name = "lib-q-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Platform detection and feature support for lib-Q"
keywords = ["cryptography", "platform", "detection", "cpu", "features"]
categories = ["cryptography", "no-std"]

[dependencies]
lib-q-core = { path = "../lib-q-core" }

[features]
default = ["std"]
std = []

[lib]
name = "lib_q_platform"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(aarch64)',
    'cfg(x86_64)',
] }
