[package]
name = "lib-q-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Platform detection and feature support for lib-Q"
keywords = ["cryptography", "platform", "detection", "cpu", "features"]
categories = ["cryptography", "no-std"]


[package.metadata.cargo-machete]
ignored = [
    "lib-q-core",
]
# `default-features = false`: lib-q-core defaults to `std` (pulls `once_cell/std`), which breaks
# bare-metal no_std targets that depend on this crate. Forward our own `std` to core's instead.
[dependencies]
lib-q-core = { path = "../lib-q-core", version = "0.0.9", default-features = false }

[features]
default = ["std"]
std = ["lib-q-core/std"]

[lib]
name = "lib_q_platform"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(aarch64)',
    'cfg(x86_64)',
] }
